// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_CLEAR 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {},
    },
  },
  "type": "SET_QUERY_CLEAR",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_CLEAR_ALL_OFFSET 1`] = `
Object {
  "result": Object {
    "query": Object {},
  },
  "type": "SET_QUERY_CLEAR_ALL_OFFSET",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_granularity 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "granularity": "lorem granularity",
      },
    },
  },
  "type": "SET_QUERY_RHSM_granularity",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_limit 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "limit": 10,
      },
    },
  },
  "type": "SET_QUERY_RHSM_limit",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_offset 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "offset": 10,
      },
    },
  },
  "type": "SET_QUERY_RHSM_offset",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_sla 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "sla": "lorem sla",
      },
    },
  },
  "type": "SET_QUERY_RHSM_sla",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_uom 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "uom": "lorem uom",
      },
    },
  },
  "type": "SET_QUERY_RHSM_uom",
}
`;

exports[`ViewReducer should handle specific defined types: defined type SET_QUERY_RHSM_usage 1`] = `
Object {
  "result": Object {
    "query": Object {
      "test_id": Object {
        "usage": "ipsum usage",
      },
    },
  },
  "type": "SET_QUERY_RHSM_usage",
}
`;
